--- a/week4/src/app/app.component.html
+++ b/week4/src/app/app.component.html
@@ -4,10 +4,11 @@
 <body>
 <nav class='navbar navbar-default'>
   <div class='container-fluid' id='nav'>
-    <a class="col-3" routerLink='/'>Home</a>
-    <a class="col-3" routerLink='/login'>Login</a>
-    <a class="col-3" routerLink='/account'>Account</a>
-    <a class="col-3" routerLink='/profile'>Profile</a>
+    <a class="col-2" routerLink='/'>Home</a>
+    <a class="col-2" routerLink='/login'>Login</a>
+    <a class="col-2" routerLink='/account'>Account</a>
+    <a class="col-2" routerLink='/profile'>Profile</a>
+    <a class="col-2" (click)='logOut()'>Log out</a>
   </div>
 </nav>
 <div class='container'>
